--- a/index.html
+++ b/index.html
@@ -2,29 +2,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
-  <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
+  <meta name="description" content="UDT is a novel unsupervised framework for discovering fine-grained, class-level transformation directions within diffusion models. By incorporating hierarchy information into contrastive learning, UDT structures the latent space to enable precise and semantically consistent edits, such as changing a dog's breed while preserving its pose.">
+  <meta property="og:title" content="UDT: Unsupervised Discovery of Transformations between Fine-Grained Classes in Diffusion Models"/>
+  <meta property="og:description" content="UDT is a novel unsupervised framework for discovering fine-grained, class-level transformation directions within diffusion models. By incorporating hierarchy information into contrastive learning, UDT structures the latent space to enable precise and semantically consistent edits, such as changing a dog's breed while preserving its pose."/>
   <meta property="og:url" content="URL OF THE WEBSITE"/>
-  <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
 
-  <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
-  <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG">
-  <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
+  <meta name="twitter:title" content="UDT: Unsupervised Discovery of Transformations between Fine-Grained Classes in Diffusion Models">
+  <meta name="twitter:description" content="UDT is a novel unsupervised framework for discovering fine-grained, class-level transformation directions within diffusion models. By incorporating hierarchy information into contrastive learning, UDT structures the latent space to enable precise and semantically consistent edits, such as changing a dog's breed while preserving its pose.">
   <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
   <meta name="twitter:card" content="summary_large_image">
-  <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
+  <meta name="keywords" content="Diffusion Models, Unsupervised Learning, Latent Space Exploration, Fine-Grained Image Editing, Contrastive Learning, Image Transformation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title>UDT: Unsupervised Discovery of Transformations</title>
   <link rel="icon" type="image/x-icon" href="static/images/ssu_icon.jpg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,27 +47,34 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            [cite_start]<h1 class="title is-1 publication-title">UDT: Unsupervised Discovery of Transformations between Fine-Grained Classes in Diffusion Models [cite: 2, 3]</h1>
             <div class="is-size-5 publication-authors">
-              <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                [cite_start]<a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Youngjae Choi</a><sup >*</sup>[cite: 4],</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  [cite_start]<a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Hyunseo Koh</a><sup >*</sup>[cite: 6],</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                    [cite_start]<a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Hojae Jeong</a>[cite: 8],
+                  </span>
+                   <span class="author-block">
+                    [cite_start]<a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Byungkwan Chae</a>[cite: 10],
+                  </span>
+                   <span class="author-block">
+                    [cite_start]<a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Sungyong Park</a>[cite: 12],
+                  </span>
+                   <span class="author-block">
+                    [cite_start]<a href="SIXTH AUTHOR PERSONAL LINK" target="_blank">Heewon Kim</a><sup >†</sup> [cite: 14]
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    [cite_start]<span class="author-block">Soongsil University, Seoul, South Korea [cite: 16]<br>BMVC 2025</span>
+                    [cite_start]<span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution [cite: 31]  [cite_start]<sup>†</sup>Indicates Corresponding author [cite: 31]</small></span>
                   </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
-                         <!-- Arxiv PDF link -->
-                      <span class="link-block">
+                         <span class="link-block">
                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
@@ -82,7 +84,6 @@
                       </a>
                     </span>
 
-                    <!-- Supplementary PDF link -->
                     <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
@@ -93,7 +94,6 @@
                     </a>
                   </span>
 
-                  <!-- Github link -->
                   <span class="link-block">
                     <a href="https://github.com/YOUR REPO HERE" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
@@ -104,7 +104,6 @@
                   </a>
                 </span>
 
-                <!-- ArXiv abstract Link -->
                 <span class="link-block">
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
@@ -123,24 +122,19 @@
 </section>
 
 
-<!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        UDT는 확산 모델 내에서 세분화된 클래스(예: 특정 강아지 품종) 간의 변환을 발견하는 새로운 비지도 프레임워크입니다. [cite_start]계층 구조를 고려한 대조 학습을 통해 잠재 공간을 구조화하여, 피사체의 자세와 같은 핵심 특징은 유지하면서 정확하고 의미적으로 일관된 편집을 가능하게 합니다. [cite: 22, 23]
       </h2>
     </div>
   </div>
 </section>
-<!-- End teaser video -->
-
-<!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
@@ -148,44 +142,36 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            [cite_start]Diffusion models demonstrate excellent performance in image generation and synthesis. [cite: 19] [cite_start]Effective and controllable editing with these models requires a deep understanding of their latent spaces, a primary focus of much prior research. [cite: 20] [cite_start]However, existing unsupervised exploration methods like NoiseCLR [5] often remain at attribute-level edits, revealing limitations in complex fine-grained class transformations. [cite: 21] [cite_start]To address this, we propose UDT (Unsupervised Discovery of Transformations), a novel framework that, despite its unsupervised nature, supports fine-grained class transformations by structuring the latent space in a hierarchy-aware manner. [cite: 22] [cite_start]UDT systematically constructs the latent space by incorporating parent class guidance, ensuring semantic consistency across class transformations while preserving pose. [cite: 23] [cite_start]Our hierarchy-informed contrastive learning disentangles class-defining traits, enabling the discovery of diverse and meaningful fine-grained transformation directions. [cite: 24] [cite_start]Experiments on dog, cat, and flower datasets demonstrate that UDT's superior performance over existing methods in generating coherent, diverse, and semantically accurate edits. [cite: 25] [cite_start]These results suggest UDT is a scalable and effective approach for semantic latent space exploration in diffusion models. [cite: 26]
           </p>
         </div>
       </div>
     </div>
   </div>
 </section>
-<!-- End paper abstract -->
-
-
-<!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
-        <!-- Your image here -->
         <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           First image description.
         </h2>
       </div>
       <div class="item">
-        <!-- Your image here -->
         <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Second image description.
         </h2>
       </div>
       <div class="item">
-        <!-- Your image here -->
         <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
          Third image description.
        </h2>
      </div>
      <div class="item">
-      <!-- Your image here -->
       <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         Fourth image description.
@@ -195,22 +181,14 @@
 </div>
 </div>
 </section>
-<!-- End image carousel -->
-
-
-
-
-<!-- Youtube video -->
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <!-- Paper video. -->
       <h2 class="title is-3">Video Presentation</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           
           <div class="publication-video">
-            <!-- Youtube embed code here -->
             <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
@@ -218,10 +196,6 @@
     </div>
   </div>
 </section>
-<!-- End youtube video -->
-
-
-<!-- Video carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
@@ -229,21 +203,18 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
             <source src="static/videos/carousel1.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
           <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
             <source src="static/videos/carousel2.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
           <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
             <source src="static/videos/carousel3.mp4"
             type="video/mp4">
           </video>
@@ -252,14 +223,6 @@
     </div>
   </div>
 </section>
-<!-- End video carousel -->
-
-
-
-
-
-
-<!-- Paper poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
@@ -271,20 +234,18 @@
       </div>
     </div>
   </section>
-<!--End paper poster -->
-
-
-<!--BibTex citation -->
-  <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@inproceedings{choi2025udt,
+  title={UDT: Unsupervised Discovery of Transformations between Fine-Grained Classes in Diffusion Models},
+  author={Choi, Youngjae and Koh, Hyunseo and Jeong, Hojae and Chae, Byungkwan and Park, Sungyong and Kim, Heewon},
+  booktitle={British Machine Vision Conference (BMVC)},
+  year={2025}
+}</code></pre>
     </div>
 </section>
-<!--End BibTex citation -->
-
-
-  <footer class="footer">
+<footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -302,11 +263,5 @@
   </div>
 </footer>
 
-<!-- Statcounter tracking code -->
-  
-<!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
-
-    <!-- End of Statcounter Code -->
-
-  </body>
+</body>
   </html>
