--- a/index.html
+++ b/index.html
@@ -47,29 +47,29 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            [cite_start]<h1 class="title is-1 publication-title">UDT: Unsupervised Discovery of Transformations between Fine-Grained Classes in Diffusion Models [cite: 2, 3]</h1>
+            <h1 class="title is-1 publication-title">UDT: Unsupervised Discovery of Transformations between Fine-Grained Classes in Diffusion Models</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                [cite_start]<a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Youngjae Choi</a><sup >*</sup>[cite: 4],</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Youngjae Choi</a><sup >*</sup>,</span>
                 <span class="author-block">
-                  [cite_start]<a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Hyunseo Koh</a><sup >*</sup>[cite: 6],</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Hyunseo Koh</a><sup >*</sup>,</span>
                   <span class="author-block">
-                    [cite_start]<a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Hojae Jeong</a>[cite: 8],
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Hojae Jeong</a><sup >*</sup>,</span>,
                   </span>
                    <span class="author-block">
-                    [cite_start]<a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Byungkwan Chae</a>[cite: 10],
+                    <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Byungkwan Chae</a><sup >*</sup>,</span>,
                   </span>
                    <span class="author-block">
-                    [cite_start]<a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Sungyong Park</a>[cite: 12],
+                    <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Sungyong Park</a>,
                   </span>
                    <span class="author-block">
-                    [cite_start]<a href="SIXTH AUTHOR PERSONAL LINK" target="_blank">Heewon Kim</a><sup >†</sup> [cite: 14]
+                    <a href="SIXTH AUTHOR PERSONAL LINK" target="_blank">Heewon Kim</a><sup >†</sup>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    [cite_start]<span class="author-block">Soongsil University, Seoul, South Korea [cite: 16]<br>BMVC 2025</span>
-                    [cite_start]<span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution [cite: 31]  [cite_start]<sup>†</sup>Indicates Corresponding author [cite: 31]</small></span>
+                    <span class="author-block">Soongsil University, Seoul, South Korea <br>BMVC 2025</span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution <sup>†</sup>Indicates Corresponding author [cite: 31]</small></span>
                   </div>
 
                   <div class="column has-text-centered">
@@ -130,7 +130,6 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        UDT는 확산 모델 내에서 세분화된 클래스(예: 특정 강아지 품종) 간의 변환을 발견하는 새로운 비지도 프레임워크입니다. [cite_start]계층 구조를 고려한 대조 학습을 통해 잠재 공간을 구조화하여, 피사체의 자세와 같은 핵심 특징은 유지하면서 정확하고 의미적으로 일관된 편집을 가능하게 합니다. [cite: 22, 23]
       </h2>
     </div>
   </div>
@@ -142,7 +141,6 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            [cite_start]Diffusion models demonstrate excellent performance in image generation and synthesis. [cite: 19] [cite_start]Effective and controllable editing with these models requires a deep understanding of their latent spaces, a primary focus of much prior research. [cite: 20] [cite_start]However, existing unsupervised exploration methods like NoiseCLR [5] often remain at attribute-level edits, revealing limitations in complex fine-grained class transformations. [cite: 21] [cite_start]To address this, we propose UDT (Unsupervised Discovery of Transformations), a novel framework that, despite its unsupervised nature, supports fine-grained class transformations by structuring the latent space in a hierarchy-aware manner. [cite: 22] [cite_start]UDT systematically constructs the latent space by incorporating parent class guidance, ensuring semantic consistency across class transformations while preserving pose. [cite: 23] [cite_start]Our hierarchy-informed contrastive learning disentangles class-defining traits, enabling the discovery of diverse and meaningful fine-grained transformation directions. [cite: 24] [cite_start]Experiments on dog, cat, and flower datasets demonstrate that UDT's superior performance over existing methods in generating coherent, diverse, and semantically accurate edits. [cite: 25] [cite_start]These results suggest UDT is a scalable and effective approach for semantic latent space exploration in diffusion models. [cite: 26]
           </p>
         </div>
       </div>
