--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
 
@@ -160,6 +161,8 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
+      <h2 class="title is-3 has-text-centered">Method</h2>
+      
       <div>
        <div class="item">
         <img src="static/images/figure2_v2.2.jpg" alt="method_figure"/>
