--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                 </span>
                 -->
 
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon"><i class="ai ai-arxiv"></i></span>
                     <span>arXiv</span>
                   </a>
-                </span>
+                </span> -->
               </div>
             </div>
 
@@ -146,7 +146,7 @@
           <h2 class="title is-3">TL;DR</h2>
           <div class="content has-text-justified">
             <p>
-              UDT is an unsupervised framework that uses parent-class guided noise decomposition to achieve breed-to-breed translation across diverse domains like dogs, cats, and birds.
+              UDT is an unsupervised framework that uses parent-class guided noise decomposition to achieve breed-to-breed translation across diverse domains like dogs, cats, flowers, and birds.
             </p>
           </div>
         </div>
@@ -263,8 +263,7 @@
             <p>
               This page was built using the
               <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a>
-              which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
-              You are free to borrow the source code of this website, we just ask that you link back to this page in the footer. <br>
+              which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page. <br>
               This website is licensed under a
               <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">
                 Creative Commons Attribution-ShareAlike 4.0 International License
