--- a/index.html
+++ b/index.html
@@ -213,6 +213,38 @@
     </div>
   </section>
 
+  <section class="section hero is-light">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">Quality Results of UDT</h2>
+          <img src="static/images/figure3.jpg" alt="method_figure"/>
+          <div class="content has-text-justified">
+            <p>
+              UDT discovers diverse and interpretable transformation directions within a single category and effectively generalizes this capability across various fine-grained domains such as dogs, cats, birds, and flowers. For instance, specific directions can transform a dog's breed into a Bulldog or a Golden Retriever with their distinct features, while others can accurately modify detailed attributes like a cat's fur color or a bird's plumage. However, a noticeable background shift is sometimes observed in the results, revealing a current limitation where the model does not perfectly disentangle the subject from the background.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section hero is-light">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">Qualitative Comparison</h2>
+          <img src="static/images/figure5_v2.jpg" alt="Qualitative comparison with other methods"/>
+          <div class="content has-text-justified">
+            <p>
+              UDT demonstrates clear advantages in qualitative comparisons against recent methods. Unsupervised approaches like NoiseCLR and Concept Discovery often fail to find accurate transformation directions for specific dog breeds, a task where UDT consistently succeeds. Furthermore, UDT's performance is competitive with established editing methods. For instance, it renders the curly texture of a Toy Poodle more faithfully than LEDITS++ and excels at maintaining the original pose during edits, unlike Null-Text.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- TO DO : ADD VIDEO -->
   <!--
   <section class="hero is-small is-light">
