--- a/index.html
+++ b/index.html
@@ -154,22 +154,6 @@
     </div>
   </section>
 
-  <section class="hero teaser">
-    <div class="container is-max-desktop">
-      <div class="hero-body">
-        <h2 class="title is-3 has-text-centered">Motivation</h2>
-        <div class="item">
-          <img src="static/images/figure1.jpg" alt="Motivation Figure" />
-          <div class="content has-text-justified">
-            <p>
-              Existing unsupervised exploration methods, like NoiseCLR, struggle with fine-grained classes such as specific dog breeds. These approaches often remain at attribute-level edits, offering limited control over detailed visual attributes. For example, transformations using NoiseCLR frequently result in outcomes unrelated to the intended target or lead to only minor changes, such as a slight adjustment in fur color.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <section class="section hero is-light">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
@@ -192,7 +176,24 @@
     </div>
   </section>
 
+  <section class="hero teaser">
+    <div class="container is-max-desktop">
+      <div class="hero-body">
+        <h2 class="title is-3 has-text-centered">Motivation</h2>
+        <div class="item">
+          <img src="static/images/figure1.jpg" alt="Motivation Figure" />
+          <div class="content has-text-justified">
+            <p>
+              Existing unsupervised exploration methods, like NoiseCLR, struggle with fine-grained classes such as specific dog breeds. These approaches often remain at attribute-level edits, offering limited control over detailed visual attributes. For example, transformations using NoiseCLR frequently result in outcomes unrelated to the intended target or lead to only minor changes, such as a slight adjustment in fur color.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="hero is-small">
+    <div class="container is-max-desktop">
     <div class="hero-body">
       <div class="container">
         <h2 class="title is-3 has-text-centered">Method</h2>
@@ -211,9 +212,10 @@
         </div>
       </div>
     </div>
+  </div>
   </section>
 
-  <section class="section hero is-light">
+  <section class="section hero">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
@@ -221,7 +223,7 @@
           <img src="static/images/figure3.jpg" alt="method_figure"/>
           <div class="content has-text-justified">
             <p>
-              UDT discovers diverse and interpretable transformation directions within a single category and effectively generalizes this capability across various fine-grained domains such as dogs, cats, birds, and flowers. For instance, specific directions can transform a dog's breed into a Bulldog or a Golden Retriever with their distinct features, while others can accurately modify detailed attributes like a cat's fur color or a bird's plumage. However, a noticeable background shift is sometimes observed in the results, revealing a current limitation where the model does not perfectly disentangle the subject from the background.
+              UDT discovers diverse and interpretable transformation directions within a single category and effectively generalizes this capability across various fine-grained domains such as dogs, cats, birds, and flowers. For instance, specific directions can transform a dog's breed into a Bulldog or a Golden Retriever with their distinct features, while others can accurately modify detailed attributes like a cat's fur color or a bird's plumage.
             </p>
           </div>
         </div>
@@ -229,7 +231,7 @@
     </div>
   </section>
 
-  <section class="section hero is-light">
+  <section class="section hero">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
